--- a/Roles/Views/Manage/ManageLogins.cshtml
+++ b/Roles/Views/Manage/ManageLogins.cshtml
@@ -1,5 +1,6 @@
-﻿@model Roles.Models.ManageLoginsViewModel
+﻿@using Roles.Models
 @using Microsoft.Owin.Security
+@model ManageLoginsViewModel
 @{
     ViewBag.Title = "Manage your external logins";
 }
