Manage reset password

--- a/Roles/Views/Manage/ChangePassword.cshtml
+++ b/Roles/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model Roles.Models.ChangePasswordViewModel
+﻿@using Roles.Models
+@model ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
